--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,45 @@
-version: '3.8'
 
+# La section 'services' définit tous les conteneurs de notre application
 services:
-  app:
+
+  ollama:
+    image: ollama/ollama
+    container_name: coach_ai_ollama
+    volumes:
+      - ollama_data:/root/.ollama
+    ports:
+      - "11434:11434"
+    restart: unless-stopped
+
+
+  # Service 1: Le backend FastAPI (API & IA)
+  backend:
+    container_name: coach_ai_backend
+    # Construit l'image à partir du Dockerfile spécifié
     build:
       context: .
-      dockerfile: Dockerfile
-    container_name: garmin_app
-    environment:
-      - DB_TYPE=postgresql
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_NAME=garmin_data
-      - DB_USER=postgres
-      - DB_PASSWORD=admin1
-      - API_HOST=0.0.0.0
-      - API_PORT=8000
-      - API_DEBUG=True
+      dockerfile: backend.Dockerfile
     ports:
       - "8000:8000"
-    depends_on:
-      - postgres
+    # Charge les variables d'environnement depuis le fichier .env
+    env_file:
+      - .env
+    restart: unless-stopped
 
-  postgres:
-    image: postgres
-    container_name: postgres_db
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: admin1
-      POSTGRES_DB: garmin_data
+  # Service 2: Le frontend Streamlit (Interface Utilisateur)
+  frontend:
+    container_name: coach_ai_frontend
+    build:
+      context: .
+      dockerfile: frontend.Dockerfile
     ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      
+      - "8501:8501"
+    env_file:
+      - .env
+    depends_on:
+      - backend
+    restart: unless-stopped
+
+# Définition du volume nommé utilisé par le service 'db'
 volumes:
-  postgres_data:
+  ollama_data:
