--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,11 @@
-name: CI Build & Test
+name: CI Build & Test (Version test)
 
 on:
   push:
-    branches: [ main, developp ]  # Correction: develop au lieu de developp
+    branches: [ main, develop, test-pipeline, 'test-*' ]  # Ajout des branches de test
   pull_request:
-    branches: [ main, developp ]
+    branches: [ main, develop ]
+  workflow_dispatch:  # Déclenchement manuel
 
 jobs:
   build-test:
@@ -12,14 +13,14 @@ jobs:
     
     strategy:
       matrix:
-        python-version: ['3.9', '3.10', '3.11']  # Test sur plusieurs versions Python
+        python-version: ['3.10']  # Une seule version pour tester plus vite
     
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4  # Version plus récente
+        uses: actions/checkout@v4
         
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5  # Version plus récente
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
           
@@ -35,11 +36,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -r requirements-dev.txt  # Dépendances de développement séparées
+          pip install -r requirements-dev.txt
           
       - name: Lint with flake8
         run: |
-          # Configuration depuis pyproject.toml ou setup.cfg
           flake8 .
           
       - name: Run tests with coverage
@@ -47,56 +47,20 @@ jobs:
           pytest --cov=. --cov-report=xml --cov-report=term-missing
           
       - name: Upload coverage to Codecov
-        if: matrix.python-version == '3.10'  # Upload seulement pour une version
+        if: matrix.python-version == '3.10'
         uses: codecov/codecov-action@v3
         with:
           file: ./coverage.xml
           flags: unittests
           name: codecov-umbrella
           
-  security-scan:
-    runs-on: ubuntu-latest
-    needs: build-test
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-          
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-          
-      - name: Security scan with Safety
-        run: safety check --json
-        
-      - name: Security scan with Bandit
-        run: bandit -r . -f json
-        
-  type-check:
-    runs-on: ubuntu-latest
-    needs: build-test
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-          
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-          
-      - name: Type checking with mypy
-        run: mypy .  # Configuration depuis pyproject.toml
+  # Jobs de sécurité désactivés pour les tests
+  # security-scan:
+  #   runs-on: ubuntu-latest
+  #   needs: build-test
+  #   if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
+  
+  # type-check:
+  #   runs-on: ubuntu-latest  
+  #   needs: build-test
+  #   if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
