Refactorisation majeure: Architecture optimisée avec séparation Django/FastAPI
## Nouvelle architecture
- **E3_model_IA/backend/django_app/**: Application Django complète avec auth JWT
- **E3_model_IA/backend/fastapi_app/**: API FastAPI avec intégration Django
- **E4_app_IA/frontend/streamlit_app/**: Interface utilisateur Streamlit
- **deployment/**: Configuration Docker et CI/CD centralisée

## Fonctionnalités ajoutées
-  Authentification JWT Django complète
-  Modèles Django: User, Activity, Coaching, Goals
-  API REST Django avec Swagger/OpenAPI
-  Intégration FastAPI + Django auth
-  Middleware d'authentification partagé
-  Sessions de coaching avec traçabilité
-  Docker containers spécialisés
-  Scripts de démarrage optimisés

## Respect des blocs de compétences
- **E1**: Gestion données (partagé)
- **E3**: Backend Django + FastAPI
- **E4**: Frontend Streamlit
- **E5**: Monitoring et logging

## Avantages
- Architecture claire et modulaire
- Déploiement indépendant des services
- Sécurité renforcée avec JWT
- Scalabilité horizontale
- Tests isolés par technologie
- Documentation complète (ARCHITECTURE.md)

--- a/requirements.txt
+++ b/requirements.txt
@@ -53,3 +53,16 @@ tqdm
 unstructured
 python-magic
 markdown
+
+# Django et DRF
+Django==4.2.7
+djangorestframework==3.14.0
+django-cors-headers==4.3.1
+djangorestframework-simplejwt==5.3.0
+django-extensions==3.2.3
+django-filter==23.3
+Pillow==10.0.1
+
+# Base de données Django
+psycopg2-binary==2.9.7  # Pour PostgreSQL (optionnel)
+django-environ==0.11.2   # Pour les variables d'environnement Django
