--- a/deployment/docker-compose-new.yml
+++ b/deployment/docker-compose-new.yml
@@ -11,6 +11,8 @@ services:
       - "8002:8002"
     env_file:
       - ../.env
+    environment:
+      - DOCKER_ENV=true
     volumes:
       - ../data:/app/data
       - ../E3_model_IA/backend/django_app/logs:/app/logs
@@ -31,6 +33,8 @@ services:
       - "8000:8000"
     env_file:
       - ../.env
+    environment:
+      - PYTHONPATH=/app:/app/E3_model_IA/backend/fastapi_app:/app/E3_model_IA/backend/django_app
     depends_on:
       - django
     volumes:
@@ -55,6 +59,8 @@ services:
       - "8501:8501"
     env_file:
       - ../.env
+    environment:
+      - DOCKER_ENV=true
     depends_on:
       - django
       - fastapi
