Nettoyage et réorganisation des fichiers Docker
- docker-compose-new.yml → docker-compose.yml (principal)
- Suppression version obsolète 3.8 du docker-compose
- Archivage: docker-compose.old.yml, backend.old.Dockerfile, frontend.old.Dockerfile
- Structure propre: django.Dockerfile, fastapi.Dockerfile, streamlit.Dockerfile
- Services testés: tous redémarrent correctement

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,33 +1,74 @@
-
-# La section 'services' définit tous les conteneurs de notre application
 services:
-
-  # Service 1: Le backend FastAPI (API & IA)
-  backend:
-    container_name: coach_ai_backend
-    # Construit l'image à partir du Dockerfile spécifié
+  # Service Django (Web + API)
+  django:
+    container_name: coach_ai_django
     build:
-      context: .
-      dockerfile: backend.Dockerfile
+      context: ..
+      dockerfile: deployment/django.Dockerfile
+    ports:
+      - "8002:8002"
+    env_file:
+      - ../.env
+    environment:
+      - DOCKER_ENV=true
+    volumes:
+      - ../data:/app/data
+      - ../E3_model_IA/backend/django_app/logs:/app/logs
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8002/admin/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  # Service FastAPI (IA)
+  fastapi:
+    container_name: coach_ai_fastapi
+    build:
+      context: ..
+      dockerfile: deployment/fastapi.Dockerfile
     ports:
       - "8000:8000"
-    # Charge les variables d'environnement depuis le fichier .env
     env_file:
-      - .env
+      - ../.env
+    environment:
+      - PYTHONPATH=/app:/app/E3_model_IA/backend/fastapi_app:/app/E3_model_IA/backend/django_app
+    depends_on:
+      - django
+    volumes:
+      - ../data:/app/data
+      - ../E3_model_IA:/app/E3_model_IA
+      - ../E1_gestion_donnees:/app/E1_gestion_donnees
+      - ../knowledge_base:/app/knowledge_base
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/docs"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # Service 2: Le frontend Streamlit (Interface Utilisateur)
-  frontend:
-    container_name: coach_ai_frontend
+  # Service Streamlit (Frontend)
+  streamlit:
+    container_name: coach_ai_streamlit
     build:
-      context: .
-      dockerfile: frontend.Dockerfile
+      context: ..
+      dockerfile: deployment/streamlit.Dockerfile
     ports:
       - "8501:8501"
     env_file:
-      - .env
+      - ../.env
+    environment:
+      - DOCKER_ENV=true
     depends_on:
-      - backend
+      - django
+      - fastapi
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8501/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-
+networks:
+  default:
+    name: coach_ai_network
