feat: Interface Django épurée avec plan simplifié et styles modernes
Améliorations interface utilisateur :
- Page d'accueil avec boutons stylisés et lien plan simplifié proéminent
- Styles btn-tertiary (violet) et btn-quaternary (rose) avec dégradés
- Interface plan simplifié avec 4 champs essentiels et analyse automatique
- Intégration advanced_agent.py pour cohérence avec chatbot Streamlit

Fonctionnalités techniques :
- Analyse automatique activités utilisateur depuis Azure SQL Server
- Génération plans via FastAPI + fallback local avec agent avancé
- Templates modernes responsive avec statistiques visuelles
- Correction routing et vues Django pour navigation fluide

Composants ajoutés :
- coaching/simple_forms.py - Formulaire simplifié
- templates coaching avec design moderne
- Styles CSS avec effets hover et animations
- URL /api/v1/coaching/simple-plan/ fonctionnelle

--- a/E3_model_IA/backend/django_app/requirements-django.txt
+++ b/E3_model_IA/backend/django_app/requirements-django.txt
@@ -12,6 +12,8 @@ drf-yasg==1.21.10
 # Base de données
 psycopg2-binary==2.9.7
 aiosqlite
+pymssql
+mssql-django
 
 # Gestion des environnements
 python-dotenv
