--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -2,4 +2,4 @@
 
 # La clé API doit être la même que celle définie dans la variable d'environnement
 # de votre backend api_service.py
-API_KEY="coach_ai_secure_key_2025"
+# API_KEY="your_api_key_here"
