--- a/E3_model_IA/backend/fastapi_app/requirements-fastapi.txt
+++ b/E3_model_IA/backend/fastapi_app/requirements-fastapi.txt
@@ -14,6 +14,7 @@ djangorestframework-simplejwt
 django-cors-headers
 django-filter
 django-extensions
+django-prometheus
 drf-yasg
 
 # Authentification
