indent modify on ci and cd yml

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,15 +12,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    
-uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    
-name: Simulate Docker build (no push, no deploy)
-    run: |
-      echo "Building image for local testing only..."
-      docker build -t local/coach_ai_django_supabase:latest .
+      - name: Simulate Docker build (no push, no deploy)
+        run: |
+          echo "Building image for local testing only..."
+          docker build -t local/coach_ai_django_supabase:latest .
 
-    
-name: No deployment target
-    run: echo "No server configured for deployment yet."
+      - name: No deployment target
+        run: echo "No server configured for deployment yet."
