--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,8 +17,8 @@ jobs:
 
       - name: Simulate Docker build (no push, no deploy)
         run: |
-          echo "Building image for local testing only..."
-          docker build -t local/coach_ai_django_supabase:latest .
+          echo "Running docker-compose (no build image manually)"
+          docker-compose -f deployment/docker-compose-supabase.yml up -d --build
 
       - name: No deployment target
         run: echo "No server configured for deployment yet."
