--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,80 @@
-name: CI Pipelines
+name: CI Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches: [ developp ]
   pull_request:
-    branches: [ main ]
+    branches: [ developp ]
 
 jobs:
-  test:
+  test-dependencies:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.11']
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y curl libpq-dev
+
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run tests
+      - name: Test Django setup
         run: |
-          pytest
+          cd E1_gestion_donnees/api_rest
+          python manage.py check --deploy
+
+      - name: Test FastAPI imports
+        run: |
+          cd E3_model_IA/backend/fastapi_app
+          python -c "import api_service; print('FastAPI imports OK')"
+
+      - name: Test Streamlit imports
+        run: |
+          cd E4_app_IA/frontend/streamlit_app
+          python -c "import app_streamlit; print('Streamlit imports OK')"
+
+      - name: Run basic tests
+        run: |
+          python -m pytest tests/test_basic.py -v
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: test-dependencies
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Django image
+        run: |
+          docker build -f deployment/django.Dockerfile -t coach-ai-django:test .
+
+      - name: Build FastAPI image
+        run: |
+          docker build -f deployment/fastapi.Dockerfile -t coach-ai-fastapi:test .
+
+      - name: Build Streamlit image
+        run: |
+          docker build -f deployment/streamlit.Dockerfile -t coach-ai-streamlit:test .
+
+      - name: Test Docker Compose
+        run: |
+          cd deployment
+          docker compose -f docker-compose-supabase.yml config
