--- a/E5_monitoring/grafana/provisioning/dashboards/dashboards.yml
+++ b/E5_monitoring/grafana/provisioning/dashboards/dashboards.yml
@@ -1,9 +1,9 @@
 apiVersion: 1
 
 providers:
-  - name: 'coaching-ia-dashboards'
+  - name: 'coach-ai-architecture-dashboards'
     orgId: 1
-    folder: 'Coaching IA'
+    folder: 'Coach AI - Architecture Unifiée'
     type: file
     disableDeletion: false
     updateIntervalSeconds: 10
