Update architecture with postgre and adapt code to match existing with recent changes

--- a/E4_app_IA/frontend/streamlit_app/.streamlit/secrets.toml
+++ b/E4_app_IA/frontend/streamlit_app/.streamlit/secrets.toml
@@ -1,2 +1,8 @@
-# Configuration secrets pour Streamlit
+# Secrets pour l'application Streamlit Coach AI
+# Configuration API FastAPI unifiée
+
 API_KEY = "coach_ai_secure_key_2025"
+
+# Configuration des URLs
+FASTAPI_URL = "http://localhost:8000"
+DJANGO_URL = "http://localhost:8002"
