--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,12 +35,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
+          pip install -r .github/requirements/requirements-ci.txt
+          pip install -r .github/requirements/requirements-dev.txt
           
       - name: Lint with flake8
         run: |
-          flake8 .
+          flake8 . --exclude=.venv,.git,__pycache__,deployment,htmlcov,tests --extend-ignore=E501,W293,W291,W292,E302,E305,F401,F541,E402,F841,E722
           
       - name: Run tests with coverage
         run: |
