--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,9 @@ addopts = [
     "--strict-config",
     "--verbose",
     "--cov=src",
+    "--cov=E1_gestion_donnees",
+    "--cov=E3_model_IA",
+    "--cov=E5_monitoring",
     "--cov-report=term-missing",
     "--cov-report=html",
     "--cov-report=xml"
@@ -51,11 +54,13 @@ markers = [
 ]
 
 [tool.coverage.run]
-source = ["src"]
+source = ["src", "E1_gestion_donnees", "E3_model_IA", "E5_monitoring"]
 omit = [
     "*/tests/*",
     "*/test_*",
-    "*/__init__.py"
+    "*/__init__.py",
+    "*/.venv/*",
+    "*/migrations/*"
 ]
 
 [tool.coverage.report]
