--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('.github/requirements/requirements-ci.txt', '.github/requirements/requirements-dev.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
             
