--- a/.github/requirements/requirements-ci.txt
+++ b/.github/requirements/requirements-ci.txt
@@ -3,6 +3,7 @@ requests>=2.28.0
 httpx>=0.24.0
 pytest>=7.0.0
 pytest-cov>=4.0.0
+pytest-asyncio>=0.21.0
 loguru>=0.6.0
 
 # Django core for tests
@@ -18,6 +19,9 @@ django-environ==0.11.2
 
 # Basic AI/ML for tests (lightweight versions)
 openai>=1.0.0
+
+# FastAPI for API tests
+fastapi>=0.68.0
 
 # Testing utilities
 schedule>=1.2.0
