--- a/.github/requirements/requirements-dev.txt
+++ b/.github/requirements/requirements-dev.txt
@@ -6,6 +6,10 @@ pytest-mock>=3.10.0
 pytest-django>=4.5.2
 pytest-xdist>=3.0.0
 
+# FastAPI for testing
+fastapi>=0.68.0
+uvicorn>=0.15.0
+
 # Linting and formatting
 flake8>=6.0.0
 black>=23.0.0
