fix: Handle None LLM in test mode and reorganize FastAPI dependencies
- Protect llm_with_tools.bind_tools() call when LLM is None in test mode
- Add fallback response in call_llm() function for test environments
- Reorganize FastAPI dependencies in requirements-ci.txt for better import order
- Remove duplicate FastAPI entries in requirements files
- All 56 tests pass locally with CI simulation

--- a/.github/requirements/requirements-ci.txt
+++ b/.github/requirements/requirements-ci.txt
@@ -1,3 +1,9 @@
+# FastAPI first for proper imports
+fastapi>=0.68.0
+uvicorn>=0.15.0
+python-multipart>=0.0.5
+prometheus_client>=0.14.0
+
 # Minimal requirements for CI/CD pipeline
 requests>=2.28.0
 httpx>=0.24.0
@@ -28,11 +34,7 @@ langgraph>=0.0.20
 faiss-cpu>=1.7.0
 typing-extensions>=4.5.0
 
-# FastAPI for API tests
-fastapi>=0.68.0
-uvicorn>=0.15.0
-python-multipart>=0.0.5
-prometheus_client>=0.14.0
+# FastAPI dependencies already installed above
 
 # Testing utilities
 schedule>=1.2.0
