--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,8 +35,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # Install FastAPI first explicitly
-          pip install fastapi>=0.68.0 uvicorn>=0.15.0 httpx>=0.24.0
+          # Install test dependencies from pyproject.toml
+          pip install -e .[test]
+          # Install additional CI dependencies
           pip install -r .github/requirements/requirements-ci.txt
           pip install -r .github/requirements/requirements-dev.txt
           # Verify FastAPI installation
@@ -48,8 +49,7 @@ jobs:
           
       - name: Run tests with coverage
         run: |
-          # Try running all tests first, fallback to excluding problematic test if needed
-          pytest || pytest --ignore=tests/test_e3_api_ia.py
+          pytest
           
       - name: Upload coverage to Codecov
         if: matrix.python-version == '3.10'
