--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,21 @@ requires = ["setuptools>=45", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "Coach AI running"
+name = "coach-ai-running"
 version = "0.1.0"
 description = "Coach de running pouvant lire les données Garmin et proposer des programmes d'entrainement avec l'IA"
 readme = "README.md"
 requires-python = ">=3.9"
+
+[project.optional-dependencies]
+test = [
+    "pytest>=8.4",
+    "pytest-asyncio>=0.23",
+    "pytest-cov>=4.0.0",
+    "fastapi>=0.111",
+    "httpx>=0.27",
+    "uvicorn>=0.15.0",
+]
 
 [tool.flake8]
 max-line-length = 88
