--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,24 +11,36 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+          
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('.github/requirements/requirements-ci.txt', '.github/requirements/requirements-dev.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          # Install test dependencies from pyproject.toml
+          pip install -e .[test]
+          # Install additional CI dependencies
+          pip install -r .github/requirements/requirements-ci.txt
+          pip install -r .github/requirements/requirements-dev.txt
+          # Verify FastAPI installation
+          python -c "import fastapi; print(f'FastAPI {fastapi.__version__} installed')"
 
       - name: Lint with flake8
         run: |
-          pip install flake8
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --exclude=.venv,.git,__pycache__,deployment,htmlcov,tests --extend-ignore=E501,W293,W291,W292,E302,E305,F401,F541,E402,F841,E722
 
       - name: Run tests
         run: |
-          pip install pytest
           pytest
