--- a/.github/requirements/requirements-ci.txt
+++ b/.github/requirements/requirements-ci.txt
@@ -30,9 +30,12 @@ langchain-openai>=0.0.5
 langchain-community>=0.0.10
 langchain-core>=0.1.0
 langchain-text-splitters>=0.0.1
-langgraph>=0.0.20
+langgraph>=0.2.0
+langgraph-checkpoint>=1.0.0
+langgraph-checkpoint-sqlite>=1.0.0
 faiss-cpu>=1.7.0
 typing-extensions>=4.5.0
+aiosqlite>=0.17.0
 
 # FastAPI dependencies already installed above
 
