--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Base de données PostgreSQL
   postgres:
@@ -30,6 +28,8 @@ services:
       context: ..
       dockerfile: deployment/django.Dockerfile
     container_name: coach_ia_django
+    env_file:
+      - ../.env
     environment:
       - DB_TYPE=postgresql
       - DB_NAME=coach_ia_db
@@ -39,9 +39,6 @@ services:
       - DB_PORT=5432
       - DB_SSLMODE=disable
       - DEBUG=False
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - GARMIN_EMAIL=${GARMIN_EMAIL}
-      - GARMIN_PASSWORD=${GARMIN_PASSWORD}
       - DOCKER_ENV=true
       - FASTAPI_URL=http://fastapi:8000
       - STREAMLIT_URL=http://streamlit:8501
@@ -61,7 +58,7 @@ services:
       sh -c "
         python manage.py migrate &&
         python manage.py collectstatic --noinput &&
-        python manage.py runserver 0.0.0.0:8002
+        python manage.py runserver 0.0.0.0:8002 --insecure
       "
 
   # Service E1 API REST
@@ -70,6 +67,8 @@ services:
       context: ..
       dockerfile: deployment/e1-api.Dockerfile
     container_name: coach_ia_e1_api
+    env_file:
+      - ../.env
     environment:
       - DB_TYPE=postgresql
       - DB_HOST=postgres
@@ -78,6 +77,7 @@ services:
       - DB_USER=coach_user
       - DB_PASSWORD=coach_password
       - JWT_SECRET=coach-e1-jwt-secret-2025
+      - PYTHONPATH=/app:/app/src
     ports:
       - "8001:8001"
     depends_on:
@@ -93,6 +93,8 @@ services:
       context: ..
       dockerfile: deployment/fastapi.Dockerfile
     container_name: coach_ia_fastapi
+    env_file:
+      - ../.env
     environment:
       - DATABASE_URL=postgresql://coach_user:coach_password@postgres:5432/coach_ia_db?sslmode=disable
       - DB_TYPE=postgresql
@@ -101,8 +103,7 @@ services:
       - DB_NAME=coach_ia_db
       - DB_USER=coach_user
       - DB_PASSWORD=coach_password
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - DOCKER_ENV=true
+      - DOCKER_ENV=false
       - API_KEY=coach_ai_secure_key_2025
     volumes:
       - ../data:/app/data
@@ -121,16 +122,23 @@ services:
       context: ..
       dockerfile: deployment/streamlit.Dockerfile
     container_name: coach_ia_streamlit
+    env_file:
+      - ../.env
     environment:
       - DOCKER_ENV=true
       - FASTAPI_URL=http://fastapi:8000
       - DJANGO_URL=http://django:8002
       - API_KEY=coach_ai_secure_key_2025
+    volumes:
+      - ../data:/app/data
+      # - ./streamlit_secrets.toml:/app/.streamlit/secrets.toml:ro  # si tu utilises des secrets
     ports:
       - "8501:8501"
     depends_on:
-      - fastapi
-      - django
+      fastapi:
+        condition: service_started
+      django:
+        condition: service_started
     restart: unless-stopped
     networks:
       - coach_ia_network
@@ -166,7 +174,7 @@ services:
       - ./grafana/provisioning:/etc/grafana/provisioning
       - grafana_data:/var/lib/grafana
     ports:
-      - "3000:3000"
+      - "3001:3000"
     restart: unless-stopped
     networks:
       - coach_ia_network
