--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -22,11 +22,43 @@ services:
     networks:
       - coach_ia_network
 
+  # Service de semence de base de données (importe le dump à chaque démarrage)
+  db-seed:
+    image: postgres:15-alpine
+    container_name: coach_ia_db_seed
+    environment:
+      PGPASSWORD: coach_password
+    depends_on:
+      postgres:
+        condition: service_healthy
+    volumes:
+      - ../dump.sql:/seed/dump.sql:ro
+    command:
+      - sh
+      - -c
+      - |
+        set -euo pipefail
+        until pg_isready -h postgres -U coach_user -d coach_ia_db; do echo 'Waiting for Postgres...'; sleep 2; done
+        psql -v ON_ERROR_STOP=1 -h postgres -U coach_user -d coach_ia_db -c 'CREATE EXTENSION IF NOT EXISTS "uuid-ossp"; CREATE EXTENSION IF NOT EXISTS "pg_trgm";' || true
+        if head -c 5 /seed/dump.sql | grep -q 'PGDMP'; then
+          echo 'Custom archive detected → pg_restore --clean'
+          pg_restore -h postgres -U coach_user -d coach_ia_db --clean --if-exists --no-owner --no-privileges /seed/dump.sql || true
+        else
+          echo 'Plain SQL detected → psql -f'
+          psql -v ON_ERROR_STOP=1 -h postgres -U coach_user -d coach_ia_db -f /seed/dump.sql || true
+        fi
+        echo 'Database seeding completed successfully.'
+    restart: "no"
+    networks:
+      - coach_ia_network
+
   # Service Django (Web + API)
   django:
     build:
       context: ..
       dockerfile: deployment/django.Dockerfile
+      args:
+        - DOCKER_DEFAULT_PLATFORM=${DOCKER_DEFAULT_PLATFORM:-}
     container_name: coach_ia_django
     env_file:
       - ../.env
@@ -51,6 +83,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      db-seed:
+        condition: service_completed_successfully
     restart: unless-stopped
     networks:
       - coach_ia_network
@@ -66,6 +100,8 @@ services:
     build:
       context: ..
       dockerfile: deployment/e1-api.Dockerfile
+      args:
+        - DOCKER_DEFAULT_PLATFORM=${DOCKER_DEFAULT_PLATFORM:-}
     container_name: coach_ia_e1_api
     env_file:
       - ../.env
@@ -83,6 +119,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      db-seed:
+        condition: service_completed_successfully
     restart: unless-stopped
     networks:
       - coach_ia_network
@@ -92,6 +130,8 @@ services:
     build:
       context: ..
       dockerfile: deployment/fastapi.Dockerfile
+      args:
+        - DOCKER_DEFAULT_PLATFORM=${DOCKER_DEFAULT_PLATFORM:-}
     container_name: coach_ia_fastapi
     env_file:
       - ../.env
@@ -112,6 +152,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      db-seed:
+        condition: service_completed_successfully
     restart: unless-stopped
     networks:
       - coach_ia_network
@@ -163,6 +205,21 @@ services:
     networks:
       - coach_ia_network
 
+  # Postgres Exporter pour métriques DB
+  postgres-exporter:
+    image: prometheuscommunity/postgres-exporter:latest
+    container_name: coach_ia_postgres_exporter
+    environment:
+      - DATA_SOURCE_NAME=postgresql://coach_user:coach_password@postgres:5432/coach_ia_db?sslmode=disable
+    depends_on:
+      postgres:
+        condition: service_healthy
+    ports:
+      - "9187:9187"
+    restart: unless-stopped
+    networks:
+      - coach_ia_network
+
   # Grafana pour la visualisation
   grafana:
     image: grafana/grafana:latest
@@ -191,14 +248,12 @@ services:
     networks:
       - coach_ia_network
     command:
-      - '--path.procfs=/host/proc'
-      - '--path.rootfs=/host/root'
-      - '--path.sysfs=/host/sys'
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /:/host/root:ro
+    # Note: host mounts below can break on macOS; disabled for portability
+    # volumes:
+    #   - /proc:/host/proc:ro
+    #   - /sys:/host/sys:ro
+    #   - /:/host/root:ro
 
   # Alertmanager pour les alertes
   alertmanager:
