--- a/deployment/prometheus/prometheus-docker.yml
+++ b/deployment/prometheus/prometheus-docker.yml
@@ -28,11 +28,17 @@ scrape_configs:
   - job_name: 'coach-django'
     static_configs:
       - targets: ['django:8002']
-    metrics_path: '/metrics'
+    metrics_path: '/metrics/'
     scrape_interval: 30s
 
-  # PostgreSQL
-  - job_name: 'postgres'
+  # PostgreSQL Exporter (expose /metrics via 9187)
+  - job_name: 'postgres-exporter'
     static_configs:
-      - targets: ['postgres:5432']
+      - targets: ['coach_ia_postgres_exporter:9187']
+    scrape_interval: 30s
+
+  # Node Exporter (métriques système)
+  - job_name: 'node-exporter'
+    static_configs:
+      - targets: ['coach_ia_node_exporter:9100']
     scrape_interval: 30s
