fix: Resolve CI pipeline issues and contributor display
- Add CI mode detection with fake API key for tests
- Fix FastAPI module imports in CI requirements
- Update CI workflow to use proper requirements file
- Set environment variables for CI testing

--- a/.github/requirements/requirements-ci.txt
+++ b/.github/requirements/requirements-ci.txt
@@ -22,6 +22,8 @@ openai>=1.0.0
 
 # FastAPI for API tests
 fastapi>=0.68.0
+uvicorn>=0.15.0
+python-multipart>=0.0.5
 
 # Testing utilities
 schedule>=1.2.0
