--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r .github/requirements/requirements-ci.txt
 
       - name: Lint with flake8
         run: |
@@ -29,6 +29,10 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 
       - name: Run tests
+        env:
+          CI: true
+          PYTEST_RUNNING: 1
+          OPENAI_API_KEY: sk-fake-key-for-ci
         run: |
           pip install pytest
           pytest
