--- a/.github/requirements/requirements-ci.txt
+++ b/.github/requirements/requirements-ci.txt
@@ -5,6 +5,7 @@ pytest>=7.0.0
 pytest-cov>=4.0.0
 pytest-asyncio>=0.21.0
 loguru>=0.6.0
+python-dotenv>=1.0.0
 
 # Django core for tests
 Django==4.2.7
