--- a/.github/requirements/requirements-ci.txt
+++ b/.github/requirements/requirements-ci.txt
@@ -15,6 +15,7 @@ djangorestframework-simplejwt==5.3.0
 django-extensions==3.2.3
 django-filter==23.3
 django-prometheus>=2.2.0
+drf-yasg>=1.21.0
 Pillow==10.0.1
 psycopg2-binary==2.9.7
 django-environ==0.11.2
